force-app/main/default/objects/Document_Field_Mapping__c/Document_Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>Document Field Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>AutoNumber</type>
        <displayFormat>MAPPING-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Document Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>