force-app/main/default/objects/Document_Field_Mapping__c/fields/Format_Override__c.field-meta.xml
<CustomField>
    <fullName>Format_Override__c</fullName>
    <label>Format Override</label>
    <length>100</length>
    <type>Text</type>
</CustomField>