force-app/main/default/objects/Document_Field_Mapping__c/fields/Is_Repeating_Section__c.field-meta.xml
<CustomField>
    <fullName>Is_Repeating_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Repeating Section</label>
    <type>Checkbox</type>
</CustomField>