force-app/main/default/objects/Document_Field_Mapping__c/fields/Mapping_Type__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Type__c</fullName>
    <label>Mapping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>FIELD</fullName><default>true</default><label>Field</label></value>
            <value><fullName>CONSTANT</fullName><default>false</default><label>Constant</label></value>
            <value><fullName>VARIABLE</fullName><default>false</default><label>Variable</label></value>
            <value><fullName>EXPRESSION</fullName><default>false</default><label>Expression</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>