force-app/main/default/objects/Document_Field_Mapping__c/fields/Relationship_Path__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Path__c</fullName>
    <label>Relationship Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>