force-app/main/default/objects/Document_Field_Mapping__c/fields/Repeat_Object__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Object__c</fullName>
    <label>Repeat Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>