force-app/main/default/objects/Document_Field_Mapping__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>