force-app/main/default/objects/Document_Field_Mapping__c/fields/Token_Name__c.field-meta.xml
<CustomField>
    <fullName>Token_Name__c</fullName>
    <label>Token Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>